# GOIT_python11_web_module_hw8

./: README.md  pyproject.toml
task1/: load_to_db.py  main.py  models.py
task2/: consumer.py  models.py  producer.py
