[tool.poetry]
name = "goit-python11-web-module-hw8"
version = "0.1.0"
description = ""
authors = ["dzvenyslavavovk <dzvinavovk.25@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python11_web_module_hw8"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
certifi = "^2023.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
